# prosim-reconstruction

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
archive/data/: DECS12.txt  prosim.xtc  prosim1.xtc  week1.txt
archive/docs/: 475ProSim.ppt  PROSIM_CASE_STUDY.md  prosim_forecasting.htm
archive/spreadsheets/: Nelson.xls  Prosim Template.xls  Prosim spreadsheet.xls  ProsimTable(Nelson).xls  ProsimTable(Week3).xls  ProsimTable.xls
docs/: PROSIM - Tracking a lost educational simulation from 1968.md  algorithms.md  calibration_report.md  forensic_verification_status.md  game_manual.md  history.md  key_discoveries.md  prosim_vii_thesis_1992.txt  verification_guide.md  xtc_verification_guide.md
prosim/: __init__.py
prosim/cli/: __init__.py  main.py
prosim/config/: __init__.py  defaults.py  schema.py
prosim/engine/: __init__.py  accuracy_benchmark.py  calibration.py  costs.py  demand.py  inventory.py  production.py  simulation.py  validation.py  workforce.py
prosim/i18n/: __init__.py
prosim/i18n/locales/: en.json  es.json
prosim/io/: __init__.py  decs_parser.py  rept_parser.py  state_io.py
prosim/models/: __init__.py  company.py  decisions.py  inventory.py  machines.py  operators.py  orders.py  report.py
tests/: __init__.py  conftest.py  test_calibration.py  test_config.py  test_cost_calculator.py  test_decs_parser.py  test_demand_manager.py  test_inventory_manager.py  test_models.py  test_production_engine.py  test_rept_parser.py  test_simulation.py  test_state_io.py  test_validation.py  test_workforce_manager.py
tests/validation/: __init__.py  test_against_original.py
web/: __init__.py  app.py  config.py  dependencies.py
web/database/: __init__.py  models.py  session.py
web/routes/: __init__.py  game.py
web/services/: __init__.py  game_service.py  simulation_service.py
web/static/css/: style.css
web/templates/: base.html
web/templates/components/: navbar.html
web/templates/pages/: game.html  help.html  index.html  new_game.html  not_found.html  report.html
