[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosim"
version = "0.1.0"
description = "A reconstruction of PROSIM, a production management simulation game (1968-1996)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nelson DeWitt", email = "prosim@example.com"}
]
keywords = ["simulation", "education", "production", "management", "game"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.0",
]

[project.scripts]
prosim = "prosim.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/prosim-reconstruction"
Documentation = "https://github.com/yourusername/prosim-reconstruction#readme"
Repository = "https://github.com/yourusername/prosim-reconstruction"

[tool.setuptools.packages.find]
where = ["."]
include = ["prosim*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=prosim --cov-report=term-missing"

[tool.coverage.run]
source = ["prosim"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
